[gd_scene load_steps=3 format=3 uid="uid://6csiflmt3fc5"]

[ext_resource type="Script" uid="uid://c7ygek8wnnyrk" path="res://Core/Components/Shield/shield.gd" id="1_3sdhc"]
[ext_resource type="Texture2D" uid="uid://cs4lj8y5jtatn" path="res://addons/simple_shapes/icons/circle.svg" id="2_eu7si"]

[node name="Shield" type="Node2D"]
script = ExtResource("1_3sdhc")

[node name="ShieldSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-3.8147e-06, -3.8147e-06)
scale = Vector2(4.66667, 4.66667)
texture = ExtResource("2_eu7si")

[node name="ShieldCooldownTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="ShieldCooldownTimer" to="." method="_on_shield_cooldown_timer_timeout"]
